# lung-subtype-explorer

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: b4e7c2a9f031_add_de_results.py  c5d6e7f8a9b0_add_top_genes.py  d6e7f8a9b0c1_add_gene_annotations.py  e93ca3a97846_initial_schema.py
app/: main.py
app/api/: de.py  deps.py  genes.py  health.py  predict.py  ui.py
app/core/: config.py  logging.py
app/db/: session.py
app/models/: __init__.py  genomics.py
app/schemas/: genomics.py
app/services/: annotation.py  model.py
app/static/css/: style.css
app/templates/: base.html  index.html  predict.html  top_genes.html
pipeline/: annotate.py  download_data.py  etl.py  load_de_results.py  train.py
r_analysis/: Dockerfile  differential_expression.R
tests/: conftest.py  test_annotation.py  test_api.py  test_download_data.py  test_etl.py  test_health.py  test_model_service.py  test_train.py
