[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lung-transcriptomics-api"
version = "0.1.0"
description = "FastAPI service for lung transcriptomics data processing and analysis"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic-settings>=2.2",
    "psycopg2-binary>=2.9",
    "httpx>=0.27",
    "pandas>=2.1",
    "pyarrow>=14.0",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "shap>=0.45",
    "python-multipart>=0.0.9",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx2>=0.28",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "pipeline*"]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["alembic/versions", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["app", "pipeline"]
omit = ["*/alembic/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 60
